2003-01-27  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/spread/ui/gtk2util.py (login): Perspective Broker login
	dialog for GTK+ version 2.

2003-01-26  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing 1.0.2rc1.

	* .: Releasing 1.0.2rc2 (rc1 was dead in the water; hlint bug now
	fixed).

	* .: Releasing 1.0.2rc3 (rc2 was dead in the water;
	twisted.lore.latex bug now fixed)

2003-01-26  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/im/interfaces.py (IClient.__init__): 1.3 Accept a
	logonDeferred parameter.  The client should call this back when
	it is successfully logged in.

	* twisted/im/basesupport.py
	(AbstractClientMixin.registerAsAccountClient): 1.13 Gone.
	chatui.registerAccountClient is called in AbstractAccount.logOn
	instead.

2003-01-22  Dave Peticolas  <dave@krondo.com>

	* twisted/web/xmlrpc.py: add docstring for Proxy. handle
	serialization errors. check for empty deferred on connectionLost.

	* twisted/test/test_internet.py: make sure wakeUp actually works

2003-01-21  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/internet/defer.py: added utility method for
	getting result of list of Deferreds as simple list.

2003-1-20  Jp Calderone <exarkun@twistedmatrix.com>

	* twisted/internet/interfaces.py: type argument removed from
	IReactorCore.resolve method.  IReactorPluggableResolver interface
	added.

	* twisted/internet/base.py: IReactorPluggable added to
	ReactorBase.__implements__ and ReactorBase.installResolver added.

2003-1-18  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/trial/unittest.py twisted/scripts/trial.py: adding --summary

2003-01-15  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing 1.0.2alpha3.

2003-01-13  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing 1.0.2alpha2.

2003-01-11  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/protocols/shoutcast.py: add client support for
	Shoutcast MP3 streaming protocol.
